--- a/course_about.html
+++ b/course_about.html
@@ -26,7 +26,7 @@
                     <a href="./courses.html" class="header-links">Курсы</a>
                     <a href="" class="header-links">Комьюнити</a>
                 </nav>
-                <a href="" class="login-btn">
+                <a href="https://accounts.google.com/?hl=RU" target="_blank" class="login-btn">
                     <img src="./images/Profile.png" alt="Profile" /><span>Войти</span>
                 </a>
             </div>
@@ -82,7 +82,6 @@
                                 <p>9 часов</p>
                             </div>
                         </div>
-                        <div class="feedback-botton margining">Начать обучение</div>
                     </div>
                     <div class="about-welcome-right">
                         <div class="info-box">
@@ -98,10 +97,13 @@
                             </div>
                         </div>
                     </div>
+                    <a href="https://flexboxfroggy.com/#ru" target="_blank" class="feedlink">
+                        <div class="feedback-botton">Начать обучение</div>
+                    </a>
                 </div>
             </section>
             <section class="video-reiting">
-                <iframe class="video-frame red-link" src="https://www.youtube.com/embed/NjahiPD445k?si=HtlvsvX8Wn3c7gnC"
+                <iframe class="video-frame" src="https://www.youtube.com/embed/NjahiPD445k?si=HtlvsvX8Wn3c7gnC"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -145,9 +147,8 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="courses-info">
-                <div class="information-wrapper">
+                <div class="tab-and-add-wrapper">
+
                     <div class="tab-menu" id="tabMenu">
                         <div class="tab active">О курсе</div>
                         <div class="tab">План курса</div>
@@ -155,6 +156,7 @@
                         <div class="tab">Отзывы</div>
                         <div class="indicator" id="indicator"></div>
                     </div>
+
                     <div class="course-addiction-info">
                         <h3 class="red-link">О КУРСЕ</h3>
                         <div class="text-block">
@@ -170,23 +172,29 @@
                                 <li>Встраивание видео</li>
                                 <li>CSS-анимация и анимация SVG</li>
                             </ul>
-                            <p class="margining">Изучив современную верстку веб-сайтов, вы сможете создавать верстку веб-сайтов любой сложности. Макет сайта KinoMonster будет доступен в популярной программе для дизайна и прототипирования Figma.</p>
-                          </div>
+                            <p class="margining">Изучив современную верстку веб-сайтов, вы сможете создавать верстку
+                                веб-сайтов любой сложности. Макет сайта KinoMonster будет доступен в популярной
+                                программе для дизайна и прототипирования Figma.</p>
+                        </div>
                     </div>
-                    <div class="speaker-info course-addiction-info">
-                        <h3 class="red-link">ПРЕПОДАВАТЕЛЬ</h3>
-                        <div class="speaker-skills">
-                            <img src="./images/Отзывыстудентов/Rectangle 1209.png" alt="img">
-                            <div class="speaker-detailed-info">
-                                <p class="boldy remming">Сергей Никонов</p>
-                                <ul>
-                                    <li>Основатель проекта</li>
-                                    <li>Опыт в веб-разработке более 10 лет</li>
-                                    <li>Работал над высоконагруженными веб-проектами в крупных компаниях <br> США и ЕВРОПЫ</li>
-                                    <li>Провел несколько десятков оффлайн и онлайн семинаров на тему <br> веб-разработки</li>
-                                    <li>Figma.</li>
-                                  </ul>
-                            </div>
+                </div>
+                <div class="speaker-info">
+                    <h3 class="red-link">ПРЕПОДАВАТЕЛЬ</h3>
+                    <div class="speaker-skills">
+                        <img src="./images/Отзывыстудентов/Rectangle 1209.png" alt="img">
+                        <div class="speaker-detailed-info">
+                            <p class="boldy remming">Сергей Никонов</p>
+                            <ul class="speaker-list opacityspan">
+                                <li class="speaker-list-item">Основатель проекта</li>
+                                <li class="speaker-list-item">Опыт в веб-разработке более 10 лет</li>
+                                <li class="speaker-list-item">Работал над высоконагруженными веб-проектами в крупных
+                                    компаниях <br> США и
+                                    ЕВРОПЫ</li>
+                                <li class="speaker-list-item">Провел несколько десятков оффлайн и онлайн семинаров на
+                                    тему <br> веб-разработки
+                                </li>
+                                <li class="speaker-list-item">Figma.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -220,19 +228,22 @@
                 </nav>
                 <div class="footer-feedback">
                     <p>Есть вопросы? Найдем ответы</p>
-                    <div class="feedback-botton">Написать нам</div>
+                    <a href="mailto:pididijonson@gmail.com?subject=Вопрос%20по%20курсам&body=Здравствуйте!%20Хочу%20уточнить..."
+                        class="feedback-botton">
+                        Написать нам
+                    </a>
                     <div class="social-media-links">
-                        <a href="" class="social-media-links">
-                            <img src="./images/footer/twitter.svg" alt="">
+                        <a href="https://x.com/home" target="_blank" class="social-media-links">
+                            <img src="./images/footer/twitter.svg" alt="img">
                         </a>
-                        <a href="" class="social-media-links">
-                            <img src="./images/footer/facebook.svg" alt="">
+                        <a href="https://www.facebook.com/" target="_blank" class="social-media-links">
+                            <img src="./images/footer/facebook.svg" alt="img">
                         </a>
-                        <a href="" class="social-media-links">
-                            <img src="./images/footer/instagramm.svg" alt="">
+                        <a href="https://www.instagram.com/" target="_blank" class="social-media-links">
+                            <img src="./images/footer/instagramm.svg" alt="img">
                         </a>
-                        <a href="" class="social-media-links">
-                            <img src="./images/footer/vk.svg" alt="">
+                        <a href="https://vk.com/" target="_blank" class="social-media-links">
+                            <img src="./images/footer/vk.svg" alt="img">
                         </a>
                     </div>
                 </div>
@@ -248,19 +259,22 @@
             indicator.style.left = `${el.offsetLeft}px`;
         }
 
+        function activateTab(tab) {
+            tabs.forEach(t => t.classList.remove("active"));
+            tab.classList.add("active");
+            updateIndicator(tab);
+            tab.scrollIntoView({ behavior: "smooth", inline: "center" });
+        }
+
         tabs.forEach(tab => {
-            tab.addEventListener("click", () => {
-                tabs.forEach(t => t.classList.remove("active"));
-                tab.classList.add("active");
-                updateIndicator(tab);
-            });
+            tab.addEventListener("click", () => activateTab(tab));
         });
 
-        // Инициализация по умолчанию
         window.addEventListener("DOMContentLoaded", () => {
-            const activeTab = document.querySelector(".tab.active");
-            updateIndicator(activeTab);
+            const activeTab = document.querySelector(".tab.active") || tabs[0];
+            activateTab(activeTab);
         });
+
     </script>
 </body>
 
