--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet" />
     <link rel="shortcut icon" href="./images/Tabicon.png" type="image/x-icon" />
     <title>ItNinja</title>
 </head>
 
 <body>
     <div class="welcome-page">
+        <img src="./images/No-conteiner.png" alt="img" class="welcome-absolute">
         <div class="conteiner welcome-background">
             <header class="header">
                 <div class="left-side">
@@ -26,7 +28,7 @@
                         <a href="./courses.html" class="header-links">Курсы</a>
                         <a href="" class="header-links">Комьюнити</a>
                     </nav>
-                    <a href="" class="login-btn">
+                    <a href="https://accounts.google.com/?hl=RU" target="_blank" class="login-btn">
                         <img src="./images/Profile.png" alt="Profile" /><span>Войти</span>
                     </a>
                 </div>
@@ -46,7 +48,7 @@
                 <div class="welcome-pictures">
                     <img class="welcome-main-pic" src="./images/person&sun.png" alt="pic.png" />
                 </div>
-                <div class="next-btn">
+                <div class="next-btn topping">
                     <span>Перейти к курсам</span>
                     <a href="./courses.html" class="circle-button">
                         <img src="./images/Nextbtn.png" width="43px" height="43px" alt="next-btn" />
@@ -148,7 +150,7 @@
                                     </div>
                                 </div>
                                 <a class="continue-to" href="./course_about.html">
-                                    <span class="opacityspan" >Подробнее</span>
+                                    <span class="opacityspan">Подробнее</span>
                                     <img src="./images/нашикурсы/Arrow - Right.png" alt="icon" />
                                 </a>
                             </div>
@@ -327,7 +329,7 @@
         </div>
         <div class="conteiner">
             <section class="feedback-from-students">
-                <h1 class="feedback-header" >Отзывы наших выпускников</h1>
+                <h1 class="feedback-header">Отзывы наших выпускников</h1>
                 <div class="feedback-cards">
                     <div class="feedback-card">
                         <div class="feedback-top_content">
@@ -336,13 +338,14 @@
                                 <p class="opacityspan">Звание: </p>
                                 <span class="red-link">Самурай</span>
                             </div>
-                            <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что высокотехнологичная концепция общественного.</p>
+                            <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что
+                                высокотехнологичная концепция общественного.</p>
                         </div>
                         <div class="feedback-author">
                             <img src="./images/Отзывыстудентов/billy.jpg" alt="icon" class="feedback-avatar">
                             <div class="author-name">
                                 <h3>Билли Херингтон</h3>
-                                <p class="opacityspan" >The Legend</p>
+                                <p class="opacityspan">The Legend</p>
                             </div>
                         </div>
                     </div>
@@ -353,7 +356,8 @@
                                 <p class="opacityspan">Звание: </p>
                                 <span class="red-link">Самурай</span>
                             </div>
-                            <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что высокотехнологичная концепция общественного.</p>
+                            <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что
+                                высокотехнологичная концепция общественного.</p>
                         </div>
                         <div class="feedback-author">
                             <img src="./images/Отзывыстудентов/diddy.jpg" alt="icon" class="feedback-avatar">
@@ -370,7 +374,8 @@
                                 <p class="opacityspan">Звание: </p>
                                 <span class="red-link">Самурай</span>
                             </div>
-                            <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что высокотехнологичная концепция общественного.</p>
+                            <p class="opacityspan">В своём стремлении повысить качество жизни, они забывают, что
+                                высокотехнологичная концепция общественного.</p>
                         </div>
                         <div class="feedback-author">
                             <img src="./images/Отзывыстудентов/sj.jpg" alt="icon" class="feedback-avatar">
@@ -412,19 +417,22 @@
                 </nav>
                 <div class="footer-feedback">
                     <p>Есть вопросы? Найдем ответы</p>
-                    <div class="feedback-botton">Написать нам</div>
+                    <a href="mailto:pididijonson@gmail.com?subject=Вопрос%20по%20курсам&body=Здравствуйте!%20Хочу%20уточнить..."
+                        class="feedback-botton">
+                        Написать нам
+                    </a>
                     <div class="social-media-links">
-                        <a href="" class="social-media-links">
-                            <img src="./images/footer/twitter.svg" alt="">
+                        <a href="https://x.com/home" target="_blank" class="social-media-links">
+                            <img src="./images/footer/twitter.svg" alt="img">
                         </a>
-                        <a href="" class="social-media-links">
-                            <img src="./images/footer/facebook.svg" alt="">
+                        <a href="https://www.facebook.com/" target="_blank" class="social-media-links">
+                            <img src="./images/footer/facebook.svg" alt="img">
                         </a>
-                        <a href="" class="social-media-links">
-                            <img src="./images/footer/instagramm.svg" alt="">
+                        <a href="https://www.instagram.com/" target="_blank" class="social-media-links">
+                            <img src="./images/footer/instagramm.svg" alt="img">
                         </a>
-                        <a href="" class="social-media-links">
-                            <img src="./images/footer/vk.svg" alt="">
+                        <a href="https://vk.com/" target="_blank" class="social-media-links">
+                            <img src="./images/footer/vk.svg" alt="img">
                         </a>
                     </div>
                 </div>
