--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="conteiner">
                 <section class="our-courses">
                     <div class="courses-header">
-                        <h1>Наши курсы</h1>
+                        <h1 class="feedback-header">Наши курсы</h1>
                         <a href="./courses.html" class="all-courses">
                             <span>Смотреть все</span>
                             <img src="./images/нашикурсы/Arrow - Right 2.png" alt="right" />
@@ -314,7 +314,7 @@
         <div class="space-for-our_knowledge">
             <div class="conteiner">
                 <div class="knowledge-block">
-                    <h1>Наши знания и технологии</h1>
+                    <h1 class="feedback-header">Наши знания и технологии</h1>
                     <div class="knowledge-icon">
                         <img src="./images/Нашизнанияитехнологии/css.png" alt="icon" />
                         <img src="./images/Нашизнанияитехнологии/js.png" alt="icon" />
